--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 </div>
             </div> -->
         </div>
+        <script src="./src/js/tab_events.js"></script>
         <script src="./src/js/functions.js"></script>
         <script src="./src/js/create_html.js"></script>
         <script src="./src/js/script.js"></script>
