Added: dragging of tabs to different locations/windows Added: minimizing windows by clicking on the title Added: new tab button
Fixed: some tabs retaining the active-tab class

--- a/index.html
+++ b/index.html
@@ -5,26 +5,9 @@
     </head>
     <body>
         <div id="root">
-            <!-- <div class="window">
-                <div class="window-title">
-                    Header
-                </div>
-                <div class="window-tab">
-                    <img class="window-favcion" src="https://jwt.io/img/favicon/favicon-32x32.png" width="16" height="16">
-                    <span class="window-title-text">subtext gsdfgs dfgsd fgsdf gsdfg sdfgs dfgs fsdf sdfgs df gsd</span>
-                </div>
-            </div>
-            <div class="window">
-                <div class="window-title">
-                    Header
-                </div>
-                <div class="window-tab" onclick="open_tab(tab_id, window_id)">
-                    <img class="window-favcion" src="https://jwt.io/img/favicon/favicon-32x32.png" width="16" height="16">
-                    <span class="window-title-text">subtext gsdfgs dfgsd fgsdf gsdfg sdfgs dfgs fsdf sdfgs df gsd</span>
-                </div>
-            </div> -->
+            <!-- Windows and Tabs LOL -->
         </div>
-        <script src="./src/js/tab_events.js"></script>
+        <script src="./src/js/events.js"></script>
         <script src="./src/js/functions.js"></script>
         <script src="./src/js/create_html.js"></script>
         <script src="./src/js/script.js"></script>
